--- a/visualization_caffe.ipynb
+++ b/visualization_caffe.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#caffe_root = '/data/ssd-caffe/caffe'\n",
-    "#prototxt = 'yolov3-tiny-ncs-without-last-maxpool-merg-batchnorm.prototxt'\n",
-    "#caffemodel = 'aaa.caffemodel'\n",
-    "#caffemodel = 'generated_merge.caffemodel'\n",
     "caffe_root = '/data/ssd-caffe/caffe'\n",
-    "caffemodel = 'Jenerated_yolov3_aaa.caffemodel'\n",
+    "#prototxt = 'yolov3-tiny-ncs-concat.prototxt'\n",
+    "#prototxt = 'yolov3-tiny-ncs.prototxt'\n",
+    "#caffemodel = 'yolov3-tiny-ncs.caffemodel'\n",
+    "#prototxt = 'yolov3-tiny-ncs-without-last-maxpool.prototxt'\n",
+    "#caffemodel = 'Jenerated_nolastpooling.caffemodel'\n",
+    "prototxt = 'yolov3-tiny-ncs-without-last-maxpool-merg-batchnorm.prototxt'\n",
+    "#caffemodel = 'aaa.caffemodel'\n",
+    "caffemodel = 'generated_merge.caffemodel'\n",
     "img_file = 'standard_size_416_persons.jpg'\n",
-    "prototxt = 'yolov3.prototxt'\n",
     "#img_file = 'standard_size_416_cars.jpg'\n",
     "import sys, os\n",
     "sys.path.insert(0, caffe_root + '/python')\n",
