--- a/blur_image_except_obj.ipynb
+++ b/blur_image_except_obj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "0.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +86,10 @@
     "    for bbox in bboxes:\n",
     "        img_obj = img[int(bbox[2]):int(bbox[3]), int(bbox[0]):int(bbox[1])]\n",
     "        img_objs.append(img_obj)\n",
-    "    img = cv2.blur(img, (int(img.shape[0]/20), int(img.shape[1]/30)))\n",
-    "    #img = cv2.blur(img, (32, 32))\n",
-    "    img = cv2.blur(img, (int(img.shape[0]/80), int(img.shape[1]/120)))\n",
+    "    #img = cv2.blur(img, (int(img.shape[0]/20), int(img.shape[1]/30)))\n",
+    "    for i in range(10):\n",
+    "        img = cv2.blur(img, (3, 3))\n",
+    "    #img = cv2.blur(img, (int(img.shape[0]/80), int(img.shape[1]/120)))\n",
     "    #img = cv2.blur(img, (8, 8))\n",
     "    i = 0\n",
     "    for bbox in bboxes:\n",
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -174,180 +175,19 @@
       "add:107.0:100.0\n",
       "add:120.0:102.0\n",
       "add:186.0:105.0\n",
-      "add:117.0:86.0\n",
-      "add:57.0:34.0\n",
-      "add:150.0:115.0\n",
-      "add:45.0:35.0\n",
-      "add:44.0:31.0\n",
-      "add:124.0:151.0\n",
-      "add:180.0:159.0\n",
-      "add:114.0:85.0\n",
-      "add:130.0:97.0\n",
-      "add:57.0:87.0\n",
-      "add:142.0:114.0\n",
-      "add:112.0:101.0\n",
-      "add:127.0:102.0\n",
-      "add:132.0:95.0\n",
-      "add:121.0:108.0\n",
-      "add:131.0:134.0\n",
-      "add:137.0:91.0\n",
-      "add:100.0:74.0\n",
-      "add:82.0:64.0\n",
-      "add:81.0:57.0\n",
-      "add:62.0:48.0\n",
-      "add:129.0:113.0\n",
-      "add:118.0:113.0\n",
-      "add:124.0:94.0\n",
-      "add:42.0:34.0\n",
-      "add:59.0:42.0\n",
-      "add:128.0:153.0\n",
-      "add:218.0:129.0\n",
-      "add:163.0:155.0\n",
-      "add:142.0:107.0\n",
-      "add:128.0:106.0\n",
-      "add:112.0:82.0\n",
-      "add:108.0:101.0\n",
-      "add:126.0:105.0\n",
-      "add:71.0:65.0\n",
-      "add:46.0:44.0\n",
-      "add:96.0:102.0\n",
-      "add:74.0:70.0\n",
-      "add:99.0:91.0\n",
-      "add:94.0:64.0\n",
-      "add:94.0:69.0\n",
-      "add:98.0:91.0\n",
-      "add:74.0:47.0\n",
-      "add:95.0:49.0\n",
-      "add:108.0:103.0\n",
-      "add:195.0:152.0\n",
-      "add:165.0:117.0\n",
-      "add:74.0:37.0\n",
-      "add:99.0:81.0\n",
-      "add:172.0:167.0\n",
-      "add:149.0:99.0\n",
-      "add:131.0:115.0\n",
-      "add:127.0:101.0\n",
-      "add:128.0:121.0\n",
-      "add:117.0:95.0\n",
-      "add:127.0:112.0\n",
-      "add:115.0:103.0\n",
-      "add:118.0:138.0\n",
-      "add:97.0:98.0\n",
-      "add:94.0:84.0\n",
-      "add:94.0:65.0\n",
-      "add:95.0:59.0\n",
-      "add:121.0:108.0\n",
-      "add:105.0:69.0\n",
-      "add:89.0:37.0\n",
-      "add:73.0:70.0\n",
-      "add:92.0:54.0\n",
-      "add:90.0:46.0\n",
-      "add:67.0:64.0\n",
-      "add:174.0:113.0\n",
-      "add:81.0:57.0\n",
-      "add:152.0:118.0\n",
-      "add:62.0:23.0\n",
-      "add:59.0:32.0\n",
-      "add:93.0:69.0\n",
-      "add:86.0:54.0\n",
-      "add:101.0:87.0\n",
-      "add:92.0:86.0\n",
-      "add:90.0:85.0\n",
-      "add:58.0:47.0\n",
-      "add:110.0:125.0\n",
-      "add:82.0:76.0\n",
-      "add:87.0:60.0\n",
-      "add:77.0:49.0\n",
-      "add:87.0:56.0\n",
-      "add:153.0:122.0\n",
-      "add:159.0:127.0\n",
-      "add:131.0:109.0\n",
-      "add:111.0:117.0\n",
-      "add:98.0:85.0\n",
-      "add:92.0:61.0\n",
-      "add:76.0:69.0\n",
-      "add:84.0:60.0\n",
-      "add:70.0:70.0\n",
-      "add:101.0:142.0\n",
-      "add:63.0:67.0\n",
-      "add:87.0:76.0\n",
-      "add:85.0:212.0\n",
-      "add:162.0:137.0\n",
-      "add:121.0:99.0\n",
-      "add:221.0:159.0\n",
-      "add:127.0:109.0\n",
-      "add:182.0:185.0\n",
-      "add:145.0:112.0\n",
-      "add:114.0:90.0\n",
-      "add:196.0:118.0\n",
-      "add:173.0:126.0\n",
-      "add:112.0:71.0\n",
-      "add:109.0:110.0\n",
-      "add:87.0:81.0\n",
-      "add:247.0:361.0\n",
-      "add:114.0:109.0\n",
-      "add:98.0:86.0\n",
-      "add:103.0:110.0\n",
-      "add:89.0:82.0\n",
-      "add:88.0:71.0\n",
-      "add:84.0:67.0\n",
-      "add:149.0:133.0\n",
-      "add:171.0:132.0\n",
-      "add:222.0:179.0\n",
-      "add:249.0:77.0\n",
-      "add:109.0:95.0\n",
-      "add:97.0:67.0\n",
-      "add:106.0:74.0\n",
-      "add:86.0:62.0\n",
-      "add:86.0:67.0\n",
-      "add:76.0:58.0\n",
-      "add:70.0:49.0\n",
-      "add:58.0:48.0\n",
-      "add:82.0:71.0\n",
-      "add:81.0:69.0\n",
-      "add:99.0:81.0\n",
-      "add:80.0:86.0\n",
-      "add:83.0:75.0\n",
-      "add:79.0:59.0\n",
-      "add:68.0:60.0\n",
-      "add:81.0:74.0\n",
-      "add:194.0:163.0\n",
-      "add:302.0:322.0\n",
-      "add:153.0:142.0\n",
-      "add:127.0:82.0\n",
-      "add:100.0:94.0\n",
-      "add:167.0:112.0\n",
-      "add:134.0:77.0\n",
-      "add:101.0:90.0\n",
-      "add:154.0:123.0\n",
-      "add:99.0:84.0\n",
-      "add:174.0:144.0\n",
-      "add:158.0:125.0\n",
-      "add:156.0:123.0\n",
-      "add:166.0:126.0\n",
-      "add:117.0:107.0\n",
-      "add:101.0:66.0\n",
-      "add:119.0:91.0\n",
-      "add:109.0:101.0\n",
-      "add:94.0:79.0\n",
-      "add:111.0:64.0\n",
-      "add:93.0:66.0\n",
-      "add:82.0:84.0\n",
-      "add:111.0:79.0\n",
-      "add:82.0:61.0\n",
-      "add:86.0:79.0\n",
-      "add:95.0:78.0\n",
-      "add:71.0:67.0\n",
-      "add:82.0:73.0\n",
-      "add:87.0:70.0\n",
-      "add:105.0:88.0\n",
-      "add:85.0:105.0\n",
-      "add:83.0:90.0\n",
-      "add:75.0:80.0\n",
-      "add:94.0:123.0\n",
-      "add:73.0:59.0\n",
-      "add:51.0:49.0\n",
-      "add:53.0:48.0\n"
+      "add:117.0:86.0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-f0ce483cebf8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     91\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0;31m###blur_background_from_image_file(SEED_IMG_DIR + xml_name[:-3] + 'jpg', boxes)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m     \u001b[0mpast_to_background_from_image_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSEED_IMG_DIR\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mxml_name\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'jpg'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboxes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbackground_img_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m     \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGENE_XML_DIR\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mxml_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;31m#break\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-49a9d70b0760>\u001b[0m in \u001b[0;36mpast_to_background_from_image_file\u001b[0;34m(file, bboxes, background_img_array, extend_spaces)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m#img = img - 50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mbackground_img_array\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'shape not match'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
      ]
     }
    ],
@@ -372,7 +212,8 @@
     "    if(not (int(head) in temp_index_array)):\n",
     "        continue\n",
     "    index = bkg_heads.index(head)\n",
-    "    background_img_array = cv2.imread(SEED_BKG_DIR + seed_bkg_names[index])    \n",
+    "    ##background_img_array = cv2.imread(SEED_BKG_DIR + seed_bkg_names[index]) ##!!!!!!!!!!!!!!!!!!!!!!!!!\n",
+    "    background_img_array = cv2.imread(SEED_IMG_DIR + xml_name[:-3] + 'jpg')\n",
     "    '''\n",
     "    head = xml_name[:11]\n",
     "    if(not (int(head) > 214000 and int(head) < 215000)):\n",
@@ -439,9 +280,10 @@
     "        objs += obj\n",
     "    last_frame_bboxes = this_frame_bboxes.copy()  \n",
     "    #print(boxes)\n",
-    "    ###blur_background_from_image_file(SEED_IMG_DIR + xml_name[:-3] + 'jpg', boxes)\n",
+    "    \n",
     "    if(len(boxes) == 0):\n",
     "        continue\n",
+    "    ###blur_background_from_image_file(SEED_IMG_DIR + xml_name[:-3] + 'jpg', boxes)\n",
     "    past_to_background_from_image_file(SEED_IMG_DIR + xml_name[:-3] + 'jpg', boxes, background_img_array)\n",
     "    tree.write(GENE_XML_DIR + xml_name)\n",
     "    #break"
@@ -461,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,8 +339,8 @@
     "    return xml_etree\n",
     "    \n",
     "def past_obj_to_background(img_obj, img_array, position = (200, 200)):\n",
-    "    img = Image.fromarray(img_array)\n",
-    "    img_obj = Image.fromarray(img_obj)\n",
+    "    img = Image.fromarray(img_array[:,:,(2,1,0)])\n",
+    "    img_obj = Image.fromarray(img_obj[:,:,(2,1,0)])\n",
     "    img.paste(img_obj, position)\n",
     "    return img\n",
     "    \n",
@@ -528,28 +370,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/darknet/python/special_image/00000900040.jpg\n",
+      "/data/darknet/python/special_xml/00000900040.xml\n"
+     ]
+    }
+   ],
    "source": [
-    "gene_xml_names = os.listdir(GENE_XML_DIR)\n",
+    "gene_xml_names = os.listdir(SEED_XML_DIR)\n",
     "for xml_name in gene_xml_names:\n",
     "    '''\n",
     "    if(not (int(xml_name[:-7]) == 204)):\n",
     "        continue\n",
     "    '''\n",
-    "    img_name = GENE_IMG_DIR + xml_name[:-3] + 'jpg'\n",
-    "    xml_name = GENE_XML_DIR + xml_name\n",
+    "    img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
+    "    xml_name = SEED_XML_DIR + xml_name\n",
+    "    print(img_name)\n",
+    "    print(xml_name)\n",
     "    tree=ET.parse(xml_name)\n",
     "    img = cv2.imread(img_name)\n",
     "    \n",
     "    objs = get_obj_from_xml(xml_name)\n",
+    "    blur_background_from_image_file(img_name, )\n",
+    "    \n",
     "    i = 0\n",
     "    for obj_element in objs:\n",
     "        bbox = get_bbox_from_xmlobj(obj_element)           \n",
     "        img_obj = get_obj_from_image_file(img_name, bbox)\n",
+    "        '''\n",
     "        cls = get_cls_from_xmlobj(obj_element)\n",
-    "        #print(cls)\n",
     "        cls_path = Path(GENE_OBJ_DIR + cls)\n",
     "        if(not cls_path.is_dir()):\n",
     "            os.system(\"mkdir \" + GENE_OBJ_DIR + cls)\n",
@@ -557,14 +412,15 @@
     "        #print(save_path_name)\n",
     "        cv2.imwrite(save_path_name, img_obj)\n",
     "        i = i+1\n",
-    "        #new_pil_img, new_xml_etree = inset_obj_to_an_image_and_xml(img_obj, img, obj_element, tree)\n",
-    "        #tree = new_xml_etree\n",
-    "        #img = np.array(new_pil_img)\n",
-    "\n",
+    "        '''\n",
+    "        new_pil_img, new_xml_etree = inset_obj_to_an_image_and_xml(img_obj, img, obj_element, tree)\n",
+    "        tree = new_xml_etree\n",
+    "        img = np.array(new_pil_img)\n",
+    "        \n",
     "    ## save xml and img\n",
-    "    #new_pil_img.save('generated_' + img_name.split('/')[-1])\n",
-    "    #new_xml_etree.write('generated_' + xml_name.split('/')[-1])\n",
-    "    #break\n",
+    "    new_pil_img.save('generated_' + img_name.split('/')[-1])\n",
+    "    new_xml_etree.write('generated_' + xml_name.split('/')[-1])\n",
+    "    break\n",
     "   "
    ]
   },
