--- a/rescale_image_with_xml.ipynb
+++ b/rescale_image_with_xml.ipynb
@@ -14,8 +14,8 @@
     "\n",
     "SEED_XML_DIR = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/tempdata/Annotations/'\n",
     "SEED_IMG_DIR = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/tempdata/JPEGImages/'\n",
-    "SEED_CHG_XML = '../generated/special_xml/'\n",
-    "SEED_CHG_JPG = '../generated/special_images/'\n",
+    "SEED_CHG_XML = '../generated/rescaled_xml/'\n",
+    "SEED_CHG_JPG = '../generated/rescaled_images/'\n",
     "\n",
     "'''\n",
     "SEED_XML_DIR = '/home/yyp/data/VOCdevkit_Persons_Sevaral_Cars/VOC2007/Annotations/'\n",
