--- a/learn-convert-yolov32caffe.ipynb
+++ b/learn-convert-yolov32caffe.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys  \n",
-    "sys.path.insert(0, '/data/ssd-caffe/py2_caffe/python')\n",
+    "sys.path.insert(0, '/data/ssd-caffe/cp_caffe/python')\n",
     "import caffe  \n",
     "import numpy as np  \n",
     "from collections import OrderedDict\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
       "benchmark\n",
       "benchmark\n",
       "['net_1', 'convolutional_2', 'maxpool_3', 'convolutional_4', 'maxpool_5', 'convolutional_6', 'maxpool_7', 'convolutional_8', 'maxpool_9', 'convolutional_10', 'maxpool_11', 'convolutional_12', 'convolutional_13', 'convolutional_14', 'convolutional_15', 'convolutional_16', 'yolo_17', 'route_18', 'convolutional_19', 'deconvolutional_20', 'route_21', 'convolutional_22', 'convolutional_23', 'yolo_24']\n",
-      "[     0      2      0 960000      0]\n",
+      "[      0       2       0 2560000       0]\n",
       "buf len:8753458\n",
       "net_1\n",
       "{'hue': '.1', 'saturation': '1.5', 'angle': '0', 'decay': '0.0005', 'learning_rate': '0.001', 'scales': '.1,.1', 'batch': '1', 'height': '416', 'channels': '3', 'width': '416', 'subdivisions': '1', 'burn_in': '1000', 'policy': 'steps', 'max_batches': '500200', 'steps': '400000,450000', 'momentum': '0.9', 'exposure': '1.5'}\n",
@@ -310,7 +310,7 @@
       "load_conv2caffe:\n",
       "start:8753458\n",
       "yolo_24\n",
-      "save caffemodel to aaa.caffemodel\n"
+      "save caffemodel to yolov3-tiny-without-last-maxpool-refined-anchors_40000.caffemodel\n"
      ]
     }
    ],
@@ -319,14 +319,14 @@
     "#weights = '/data/github-repos/darknet/ncs/yolov3-tiny-ncs_20000.weights'\n",
     "#prototxt = '/data/github-repos/darknet/ncs/yolov3-tiny-ncs.prototxt'\n",
     "cfgfile = '/data/github_repos/darknet/ncs/yolov3-tiny-ncs-without-last-maxpool.cfg'\n",
-    "weights = '/data/github_repos/darknet/ncs/yolov3-tiny-ncs-without-last-maxpool_20000.weights'\n",
+    "weights = '/data/github_repos/darknet/ncs/yolov3-tiny-ncs-without-last-maxpool-refined-anchors_40000.weights'\n",
     "prototxt = '/data/github_repos/darknet/ncs/yolov3-tiny-ncs-without-last-maxpool.prototxt'\n",
     "#cfgfile = '/data/github-repos/darknet/ncs/yolov3-tiny-ncs-merged-bn.cfg'\n",
     "#weights = '/data/github-repos/darknet/ncs/aaa.weights'\n",
     "#prototxt = '/data/github-repos/darknet/ncs/yolov3-tiny-ncs-without-last-maxpool-merg-batchnorm.prototxt'\n",
     "\n",
     "#caffemodel = 'Jenerated_nolastpooling.caffemodel'\n",
-    "caffemodel = 'aaa.caffemodel'\n",
+    "caffemodel = 'yolov3-tiny-without-last-maxpool-refined-anchors_40000.caffemodel'\n",
     "darknet2caffe(cfgfile, weights, prototxt, caffemodel)"
    ]
   },
