--- a/Image_Affine.ipynb
+++ b/Image_Affine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xmin: -5.684341886080802e-14, xmax: 768.0, ymin: -5.684341886080802e-14, ymax: 576.0\n",
+      "roted_h: 768.0, roted_w: 576.0\n",
+      "top_bottom:0, left_right_:0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "img = cv2.imread('/data/darknet/data/dog.jpg')\n",
     "thealta = 180\n",
@@ -70,6 +90,13 @@
     "cv2.imshow(\"Rotated0\", rotated_img)\n",
     "cv2.waitKey(1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
