--- a/just_insert_special_obj.ipynb
+++ b/just_insert_special_obj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,20 +106,11 @@
     "    while(not check_bbox(new_bbox, bboxes)):\n",
     "        print('new_bbox not suitable, retry...')\n",
     "        new_bbox = generate_new_bbox(img.shape[:2], img_obj.shape[:2])\n",
-    "    #print('new_bbox succussful')\n",
     "    new_pil_img, new_xml_etree = past_and_insert(img_obj, img, (new_bbox[0], new_bbox[2]), obj_element, tree)\n",
     "    \n",
-    "    return new_pil_img, new_xml_etree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return new_pil_img, new_xml_etree\n",
+    "\n",
     "def generate_new_xmlobj(xmlobj_old, new_position, new_size):\n",
-    "    print(xmlobj_old)\n",
     "    element_object = ET.Element('object')\n",
     "    tag_name = ET.SubElement(element_object, 'name')\n",
     "    tag_name.text = xmlobj_old.find('name').text\n",
@@ -145,27 +136,20 @@
     "    for key in attribut_vale_dic.keys():\n",
     "        tag_name = ET.SubElement(element_object, key)\n",
     "        tag_name.text = attribut_vale_dic[key]\n",
-    "        #print(tag_name.text)\n",
-    "    print(element_object)\n",
     "    return element_object\n",
     "#generate_xml_info_under_object({'name':'my-class','difficult':'0'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "person\n",
-      "(150, 210, 3)\n",
-      "{'name': 'person', 'difficult': '0'}\n",
-      "<Element 'object' at 0x7f1f26971638>\n",
-      "<Element 'object' at 0x7f1f26971638>\n",
-      "<Element 'object' at 0x7f1f26971638>\n"
+      "new_bbox not suitable, retry...\n"
      ]
     }
    ],
@@ -181,7 +165,6 @@
     "    tree=ET.parse(xml_name)\n",
     "    img = cv2.imread(img_name)\n",
     "    for cls in special_obj_cls:\n",
-    "        print(cls)\n",
     "        if(not cls in classes):\n",
     "            continue\n",
     "        objs = os.listdir(SPEC_OBJ_DIR + cls)\n",
@@ -189,12 +172,8 @@
     "            if(not (obj.endswith('.png') or obj.endswith('.jpg'))):\n",
     "                continue\n",
     "            img_obj = cv2.imread(SPEC_OBJ_DIR + cls + '/' + obj)\n",
-    "            print(img_obj.shape)\n",
     "            dic_ = {'name':cls, 'difficult':'0'}\n",
-    "            print(dic_)\n",
     "            obj_element = generate_xml_info_under_object(dic_)\n",
-    "            print(obj_element)\n",
-    "\n",
     "            new_pil_img, new_xml_etree = inset_obj_to_an_image_and_xml(img_obj, img, obj_element, tree)       \n",
     "            tree = new_xml_etree\n",
     "            img = np.array(new_pil_img)\n",
@@ -206,13 +185,6 @@
     "    new_xml_etree.write(GENE_XML_WITH_SPECIAL_OBJ + time_str + xml_name.split('/')[-1])\n",
     "    break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
