--- a/ztc_detect.ipynb
+++ b/ztc_detect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "cfg_file = sys.argv[2]\n",
     "weights_file = sys.argv[3]\n",
     "'''\n",
+    "\n",
     "images_dir = '/data/wxjs/JPEGImages/'\n",
     "data_file = '/data/github_repos/ztc_pack/voc-ztc.data'\n",
     "cfg_file = '/data/github_repos/ztc_pack/yolov3-ztc-test.cfg'\n",
@@ -174,6 +175,7 @@
     "    meta = load_meta(data_file)\n",
     "    \n",
     "    #cap = cv2.VideoCapture(video_file)\n",
+    "    time_start = datetime.datetime.now()\n",
     "    images = os.listdir(images_dir)\n",
     "    f2 = open('/tmp/slagcar_output.txt','a')\n",
     "\n",
@@ -181,11 +183,15 @@
     "        ret = (image.endswith('.png') or image.endswith('.jpg'))\n",
     "        if ret == True:\n",
     "            image_file = images_dir + image\n",
+    "            \n",
     "            r = detect(net, meta, image_file)\n",
+    "            \n",
+    "            '''\n",
     "            origimg = cv2.imread(image_file)\n",
     "            height = origimg.shape[0]\n",
     "            width = origimg.shape[1]\n",
     "            depth = origimg.shape[2]\n",
+    "            '''\n",
     "            \n",
     "            obj_result_str = ''\n",
     "            for i in range(len(r)):\n",
@@ -208,33 +214,31 @@
     "                str(int(bbox[0])) + ',' + str(int(bbox[1])) + ',' + \\\n",
     "                str(int(bbox[2])) + ',' + str(int(bbox[3])) + ')' + \"\\n\"\n",
     "                #print(obj_result_str)\n",
-    "   \n",
-    "            '''\n",
-    "            \n",
-    "            x1 = max(0, (bbox[0] - bbox[2]/2))\n",
-    "            y1 = max(0, (bbox[1] - bbox[3]/2))\n",
-    "            x2 = min(width, (bbox[0] + bbox[2]/2))\n",
-    "            y2 = min(height, (bbox[1] + bbox[3]/2))\n",
-    "            \n",
-    "            p1 = (int(x1), int(y1))\n",
-    "            p2 = (int(x2), int(y2))\n",
-    "            \n",
-    "            cv2.rectangle(origimg, p1, p2, (0,255,0))\n",
-    "            p3 = (max(p1[0], 15), max(p1[1], 15))\n",
-    "            title = \"%s:%.2f\" % (cls, score)\n",
-    "            cv2.putText(origimg, title, p3, cv2.FONT_ITALIC, 1.2, (0, 255, 0), 2)\n",
+    "               \n",
+    "                '''\n",
+    "                x1 = max(0, (bbox[0] - bbox[2]/2))\n",
+    "                y1 = max(0, (bbox[1] - bbox[3]/2))\n",
+    "                x2 = min(width, (bbox[0] + bbox[2]/2))\n",
+    "                y2 = min(height, (bbox[1] + bbox[3]/2))\n",
+    "\n",
+    "                p1 = (int(x1), int(y1))\n",
+    "                p2 = (int(x2), int(y2))\n",
+    "\n",
+    "                cv2.rectangle(origimg, p1, p2, (0,255,0))\n",
+    "                p3 = (max(p1[0], 15), max(p1[1], 15))\n",
+    "                title = \"%s:%.2f\" % (cls, score)\n",
+    "                cv2.putText(origimg, title, p3, cv2.FONT_ITALIC, 1.2, (0, 255, 0), 2)\n",
     "            \n",
     "            sized = cv2.resize(origimg,(origimg.shape[1]/2, origimg.shape[0]/2))\n",
-    "            cv2.imwrite('result_' + image, sized)            \n",
+    "            cv2.imwrite('./ztc_result/result_' + image, sized)            \n",
     "            cv2.imshow(\"yolov3\", sized)\n",
     "            \n",
-    "            # Press Q on keyboard to  exit\n",
-    "            cv2.waitKey(2000)\n",
-    "            '''\n",
+    "            cv2.waitKey(2000) '''          \n",
     "    \n",
     "            if(obj_result_str != ''):\n",
     "                f2.write(obj_result_str)                      \n",
-    "    f2.close()"
+    "    f2.close()\n",
+    "    print(datetime.datetime.now() - time_start)"
    ]
   },
   {
