coco datasets to voc xml

--- a/visualization_caffe.ipynb
+++ b/visualization_caffe.ipynb
@@ -24,7 +24,7 @@
     "%matplotlib inline\n",
     "caffe.set_mode_cpu()\n",
     "net = caffe.Net(prototxt, caffemodel, caffe.TEST)\n",
-    "img_caffe_io = caffe.io.load_image(img_file)\n",
+    "img_caffe_io = caffe.io.load_image(img_file) ###RGB\n",
     "#print(img.shape)\n",
     "#plt.imshow(img)\n",
     "import cv2\n",
