--- a/rescale_image_with_xml.ipynb
+++ b/rescale_image_with_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,13 @@
     "from PIL import Image\n",
     "\n",
     "\n",
-    "SEED_XML_DIR = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/tempdata/Annotations/'\n",
-    "SEED_IMG_DIR = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/tempdata/JPEGImages/'\n",
-    "SEED_CHG_XML = '../generated/rescaled_xml/'\n",
-    "SEED_CHG_JPG = '../generated/rescaled_images/'\n",
+    "SEED_XML_DIR = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/Annotations/'\n",
+    "SEED_IMG_DIR = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/JPEGImages/'\n",
+    "SEED_CHG_XML = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/generated/rescaled_xml/'\n",
+    "SEED_CHG_JPG = '/home/yyp/data/VOCdevkit_NanJing_Vehicle_Person/VOC2007/generated/rescaled_images/'\n",
     "\n",
-    "'''\n",
-    "SEED_XML_DIR = '/home/yyp/data/VOCdevkit_Persons_Sevaral_Cars/VOC2007/Annotations/'\n",
-    "SEED_IMG_DIR = '/home/yyp/data/VOCdevkit_Persons_Sevaral_Cars/VOC2007/JPEGImages/'\n",
-    "SEED_CHG_XML = '/home/yyp/data/VOCdevkit_Persons_Sevaral_Cars/VOC2007/Changed_Annotations/'\n",
-    "SEED_CHG_JPG = '/home/yyp/data/VOCdevkit_Persons_Sevaral_Cars/VOC2007/Changed_JPEGImages/'\n",
-    "'''\n",
+    "os.system(\"mkdir -p \" + SEED_CHG_XML)\n",
+    "os.system(\"mkdir -p \" + SEED_CHG_JPG)\n",
     "\n",
     "import numpy as np\n",
     "import cv2"
@@ -30,31 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "204\n"
+      "4823\n"
      ]
     }
    ],
    "source": [
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "#seed_img_names = os.listdir(SEED_IMG_DIR)\n",
+    "seed_xml_names.sort()\n",
     "print(len(seed_xml_names))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_shrink_scale = 0.2\n",
-    "y_shrink_scale = 0.2\n",
+    "x_shrink_scale = 0\n",
+    "y_shrink_scale = 0.3\n",
+    "padding = 255\n",
     "for xml in seed_xml_names:\n",
     "    \n",
     "    # generate new jpg image file\n",
@@ -62,7 +60,7 @@
     "    img_path = SEED_IMG_DIR + img_file\n",
     "    img = cv2.imread(img_path)\n",
     "    array = np.zeros_like(img)\n",
-    "    array.fill(25.5)    \n",
+    "    array.fill(padding)   \n",
     "    new_w = int(img.shape[1]*(1-x_shrink_scale))\n",
     "    new_h = int(img.shape[0]*(1-y_shrink_scale))\n",
     "    shrink_width = img.shape[1] - new_w\n",
@@ -71,7 +69,7 @@
     "    #array[:, int(shrink_width/2):int(shrink_width/2) + new_w] = img\n",
     "    img = cv2.resize(img, (new_w, new_h))\n",
     "    array[int(shrink_heigt/2):int(shrink_heigt/2) + new_h, int(shrink_width/2):int(shrink_width/2) + new_w] = img\n",
-    "    cv2.imwrite(SEED_CHG_JPG + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) + \"_\" + img_file, array)\n",
+    "    cv2.imwrite(SEED_CHG_JPG + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) + \"_\" + str(padding) + \"_\"+ img_file, array)\n",
     "    \n",
     "    # generate new anotation xml file    \n",
     "    xml_path = SEED_XML_DIR + xml\n",
@@ -93,7 +91,7 @@
     "        xmlbox.find('xmax').text = str(int(xmax*(1-x_shrink_scale) + shrink_width/2))\n",
     "        xmlbox.find('ymin').text = str(int(ymin*(1-y_shrink_scale) + shrink_heigt/2))\n",
     "        xmlbox.find('ymax').text = str(int(ymax*(1-y_shrink_scale) + shrink_heigt/2))\n",
-    "    tree.write(SEED_CHG_XML + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) + \"_\" + xml)\n",
+    "    tree.write(SEED_CHG_XML + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) +  \"_\" + str(padding) +\"_\" + xml)\n",
     "    #cv2.imshow(\"demo\", array)\n",
     "    #cv2.waitKey(5000)\n",
     "    #break"
