data annotation tools

--- a/coco_generate_part_jason_with_target_classes.ipynb
+++ b/coco_generate_part_jason_with_target_classes.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'area': 1545.4213000000007, 'category_id': 58, 'bbox': [234.22, 317.11, 149.39, 38.55], 'iscrowd': 0, 'image_id': 200365, 'segmentation': [[247.71, 354.7, 253.49, 346.99, 276.63, 337.35, 312.29, 333.49, 364.34, 331.57, 354.7, 327.71, 369.16, 325.78, 376.87, 333.49, 383.61, 330.6, 379.76, 321.93, 365.3, 320.0, 356.63, 317.11, 266.02, 331.57, 260.24, 334.46, 260.24, 337.35, 242.89, 338.31, 234.22, 338.31, 234.22, 348.92, 239.04, 353.73, 248.67, 355.66, 252.53, 353.73]], 'id': 509}\n",
+      "{'image_id': 50518, 'id': 89, 'iscrowd': 0, 'category_id': 58, 'segmentation': [[252.46, 208.17, 267.96, 210.11, 280.14, 213.98, 285.68, 221.45, 279.59, 227.27, 270.73, 223.12, 256.61, 218.69, 253.02, 217.3, 248.03, 220.07, 245.54, 215.92, 245.82, 209.55, 249.69, 208.45]], 'bbox': [245.54, 208.17, 40.14, 19.1], 'area': 421.47274999999996}\n",
       "read ready\n"
      ]
     }
@@ -113,10 +113,10 @@
     "    8:'truck'\n",
     "}\n",
     "classNum = [1, 2, 3, 4, 6, 8]\n",
-    "cocojson=\"/media/yyp/DATA/Public_Datasets/annotations/\\\n",
-    "instances_train2017.json\"\n",
+    "cocojson=\"/media/yyp/DATA/Public_Datasets/COCO/2014/annotations/\\\n",
+    "instances_train2014.json\"\n",
     "targetJason = \"/media/yyp/DATA/Public_Datasets/Generated/\\\n",
-    "COCO_train.json\"\n",
+    "selected_cls_COCO_train_2014.json\"\n",
     "os.system(\"rm \" + targetJason)\n",
     "def writeNum(Num):\n",
     "    with open(targetJason, \"a+\") as f:\n",
@@ -140,6 +140,13 @@
     "writeNum(inputfile)\n",
     "del data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
