--- a/coco_select_target_image.ipynb
+++ b/coco_select_target_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     "import os\n",
     "import cv2\n",
     "targetJason = \"/media/yyp/DATA/Public_Datasets/Generated/\\\n",
-    "COCO_train.json\"\n",
+    "selected_cls_COCO_train_2017.json\"\n",
     "nameStr = []\n",
     "with open(targetJason, \"r+\") as f:\n",
     "    data = json.load(f)\n",
@@ -97530,8 +97530,8 @@
     }
    ],
    "source": [
-    "path = '/media/yyp/DATA/Public_Datasets/COCOtrain2017/train2017/'\n",
-    "savePath=\"/media/yyp/DATA/Public_Datasets/COCO/JPEGImages/\"\n",
+    "path = '/media/yyp/DATA/Public_Datasets/COCO/2014/train2014/'\n",
+    "savePath=\"/media/yyp/DATA/Public_Datasets/COCO/2014/JPEGImages/\"\n",
     "count=0\n",
     "last_id = 21912\n",
     "nameStr = nameStr[21911:]\n",
