expend union objs success

--- a/just_get_obj_with_info.ipynb
+++ b/just_get_obj_with_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,18 @@
     "from pathlib import Path\n",
     "\n",
     "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "image_dir = '/data/darknet/python/20190111_image/'\n",
-    "xml_dir = '/data/darknet/python/20190111_xml/'\n",
+    "#image_dir = '/data/darknet/python/20190111_image/'\n",
+    "#xml_dir = '/data/darknet/python/20190111_xml/'\n",
+    "'''\n",
+    "image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/JPEGImages/'\n",
+    "xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/Annotations/'\n",
     "\n",
     "SEED_XML_DIR = xml_dir\n",
     "SEED_IMG_DIR = image_dir\n",
+    "'''\n",
     "\n",
-    "GENE_OBJ_DIR = '/data/darknet/python/' + time_str + '_jenerated_obj/'\n",
-    "os.system('mkdir ' + GENE_OBJ_DIR)\n",
+    "GENE_OBJ_DIR = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/obj/'\n",
+    "os.system('mkdir -p ' + GENE_OBJ_DIR)\n",
     "\n",
     "def get_obj_from_xml(xml):\n",
     "    in_file = open(xml_name)\n",
@@ -46,262 +50,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data/darknet/python/20190111_image/00000440000.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440000.xml\n",
-      "/data/darknet/python/20190111_image/00000440001.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440001.xml\n",
-      "/data/darknet/python/20190111_image/00000440002.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440002.xml\n",
-      "/data/darknet/python/20190111_image/00000440003.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440003.xml\n",
-      "/data/darknet/python/20190111_image/00000440004.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440004.xml\n",
-      "/data/darknet/python/20190111_image/00000440005.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440005.xml\n",
-      "/data/darknet/python/20190111_image/00000440006.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440006.xml\n",
-      "/data/darknet/python/20190111_image/00000440007.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440007.xml\n",
-      "/data/darknet/python/20190111_image/00000440008.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440008.xml\n",
-      "/data/darknet/python/20190111_image/00000440009.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440009.xml\n",
-      "/data/darknet/python/20190111_image/00000440010.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440010.xml\n",
-      "/data/darknet/python/20190111_image/00000440011.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440011.xml\n",
-      "/data/darknet/python/20190111_image/00000440012.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440012.xml\n",
-      "/data/darknet/python/20190111_image/00000440013.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440013.xml\n",
-      "/data/darknet/python/20190111_image/00000440014.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440014.xml\n",
-      "/data/darknet/python/20190111_image/00000440015.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440015.xml\n",
-      "/data/darknet/python/20190111_image/00000440016.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440016.xml\n",
-      "/data/darknet/python/20190111_image/00000440017.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440017.xml\n",
-      "/data/darknet/python/20190111_image/00000440018.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440018.xml\n",
-      "/data/darknet/python/20190111_image/00000440019.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440019.xml\n",
-      "/data/darknet/python/20190111_image/00000440020.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440020.xml\n",
-      "/data/darknet/python/20190111_image/00000440021.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440021.xml\n",
-      "/data/darknet/python/20190111_image/00000440022.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440022.xml\n",
-      "/data/darknet/python/20190111_image/00000440023.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440023.xml\n",
-      "/data/darknet/python/20190111_image/00000440024.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440024.xml\n",
-      "/data/darknet/python/20190111_image/00000440025.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440025.xml\n",
-      "/data/darknet/python/20190111_image/00000440026.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440026.xml\n",
-      "/data/darknet/python/20190111_image/00000440027.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440027.xml\n",
-      "/data/darknet/python/20190111_image/00000440028.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440028.xml\n",
-      "/data/darknet/python/20190111_image/00000440029.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440029.xml\n",
-      "/data/darknet/python/20190111_image/00000440030.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440030.xml\n",
-      "/data/darknet/python/20190111_image/00000440031.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440031.xml\n",
-      "/data/darknet/python/20190111_image/00000440032.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440032.xml\n",
-      "/data/darknet/python/20190111_image/00000440033.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440033.xml\n",
-      "/data/darknet/python/20190111_image/00000440034.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440034.xml\n",
-      "/data/darknet/python/20190111_image/00000440035.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440035.xml\n",
-      "/data/darknet/python/20190111_image/00000440036.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440036.xml\n",
-      "/data/darknet/python/20190111_image/00000440037.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440037.xml\n",
-      "/data/darknet/python/20190111_image/00000440038.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440038.xml\n",
-      "/data/darknet/python/20190111_image/00000440039.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440039.xml\n",
-      "/data/darknet/python/20190111_image/00000440040.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440040.xml\n",
-      "/data/darknet/python/20190111_image/00000440041.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440041.xml\n",
-      "/data/darknet/python/20190111_image/00000440042.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440042.xml\n",
-      "/data/darknet/python/20190111_image/00000440043.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440043.xml\n",
-      "/data/darknet/python/20190111_image/00000440044.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440044.xml\n",
-      "/data/darknet/python/20190111_image/00000440045.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440045.xml\n",
-      "/data/darknet/python/20190111_image/00000440046.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440046.xml\n",
-      "/data/darknet/python/20190111_image/00000440047.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440047.xml\n",
-      "/data/darknet/python/20190111_image/00000440048.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440048.xml\n",
-      "/data/darknet/python/20190111_image/00000440049.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440049.xml\n",
-      "/data/darknet/python/20190111_image/00000440050.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440050.xml\n",
-      "/data/darknet/python/20190111_image/00000440051.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440051.xml\n",
-      "/data/darknet/python/20190111_image/00000440052.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440052.xml\n",
-      "/data/darknet/python/20190111_image/00000440053.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440053.xml\n",
-      "/data/darknet/python/20190111_image/00000440054.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440054.xml\n",
-      "/data/darknet/python/20190111_image/00000440055.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440055.xml\n",
-      "/data/darknet/python/20190111_image/00000440056.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440056.xml\n",
-      "/data/darknet/python/20190111_image/00000440057.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440057.xml\n",
-      "/data/darknet/python/20190111_image/00000440058.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440058.xml\n",
-      "/data/darknet/python/20190111_image/00000440059.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440059.xml\n",
-      "/data/darknet/python/20190111_image/00000440060.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440060.xml\n",
-      "/data/darknet/python/20190111_image/00000440061.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440061.xml\n",
-      "/data/darknet/python/20190111_image/00000440062.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440062.xml\n",
-      "/data/darknet/python/20190111_image/00000440063.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440063.xml\n",
-      "/data/darknet/python/20190111_image/00000440064.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440064.xml\n",
-      "/data/darknet/python/20190111_image/00000440065.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440065.xml\n",
-      "/data/darknet/python/20190111_image/00000440066.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440066.xml\n",
-      "/data/darknet/python/20190111_image/00000440067.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440067.xml\n",
-      "/data/darknet/python/20190111_image/00000440068.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440068.xml\n",
-      "/data/darknet/python/20190111_image/00000440069.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440069.xml\n",
-      "/data/darknet/python/20190111_image/00000440070.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440070.xml\n",
-      "/data/darknet/python/20190111_image/00000440071.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440071.xml\n",
-      "/data/darknet/python/20190111_image/00000440072.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440072.xml\n",
-      "/data/darknet/python/20190111_image/00000440073.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440073.xml\n",
-      "/data/darknet/python/20190111_image/00000440074.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440074.xml\n",
-      "/data/darknet/python/20190111_image/00000440075.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440075.xml\n",
-      "/data/darknet/python/20190111_image/00000440076.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440076.xml\n",
-      "/data/darknet/python/20190111_image/00000440077.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440077.xml\n",
-      "/data/darknet/python/20190111_image/00000440078.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440078.xml\n",
-      "/data/darknet/python/20190111_image/00000440079.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440079.xml\n",
-      "/data/darknet/python/20190111_image/00000440080.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440080.xml\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data/darknet/python/20190111_image/00000440081.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440081.xml\n",
-      "/data/darknet/python/20190111_image/00000440082.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440082.xml\n",
-      "/data/darknet/python/20190111_image/00000440083.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440083.xml\n",
-      "/data/darknet/python/20190111_image/00000440084.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440084.xml\n",
-      "/data/darknet/python/20190111_image/00000440085.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440085.xml\n",
-      "/data/darknet/python/20190111_image/00000440086.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440086.xml\n",
-      "/data/darknet/python/20190111_image/00000440087.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440087.xml\n",
-      "/data/darknet/python/20190111_image/00000440088.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440088.xml\n",
-      "/data/darknet/python/20190111_image/00000440089.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440089.xml\n",
-      "/data/darknet/python/20190111_image/00000440090.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440090.xml\n",
-      "/data/darknet/python/20190111_image/00000440091.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440091.xml\n",
-      "/data/darknet/python/20190111_image/00000440092.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440092.xml\n",
-      "/data/darknet/python/20190111_image/00000440093.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440093.xml\n",
-      "/data/darknet/python/20190111_image/00000440094.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440094.xml\n",
-      "/data/darknet/python/20190111_image/00000440095.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440095.xml\n",
-      "/data/darknet/python/20190111_image/00000440096.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440096.xml\n",
-      "/data/darknet/python/20190111_image/00000440097.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440097.xml\n",
-      "/data/darknet/python/20190111_image/00000440098.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440098.xml\n",
-      "/data/darknet/python/20190111_image/00000440099.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440099.xml\n",
-      "/data/darknet/python/20190111_image/00000440100.jpg\n",
-      "/data/darknet/python/20190111_xml/00000440100.xml\n"
-     ]
-    }
-   ],
-   "source": [
-    "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
-    "seed_xml_names.sort()\n",
-    "#classes = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person']\n",
-    "classes = ['motorbike', 'person']\n",
-    "for xml_name in seed_xml_names:\n",
-    "    img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
-    "    xml_name = SEED_XML_DIR + xml_name\n",
-    "    print(img_name)\n",
-    "    print(xml_name)\n",
-    "    tree=ET.parse(xml_name)\n",
-    "    img = cv2.imread(img_name)    \n",
-    "    objs = get_obj_from_xml(xml_name)\n",
-    "    \n",
-    "    i = -1\n",
-    "    for obj_element in objs:\n",
-    "        bbox = get_bbox_from_xmlobj(obj_element)\n",
-    "        img_obj = get_obj_from_image_file(img_name, bbox)\n",
-    "        i = i+1\n",
-    "        cls = get_cls_from_xmlobj(obj_element)\n",
-    "        if(cls not in classes):\n",
-    "            continue\n",
-    "        cls_path = Path(GENE_OBJ_DIR + cls)\n",
-    "        if(not cls_path.is_dir()):\n",
-    "            os.system(\"mkdir -p \" + GENE_OBJ_DIR + cls) # If use 'cls_path' : Can't convert 'PosixPath' object to str implicitly\n",
-    "        save_path_name = GENE_OBJ_DIR + cls + \"/\" + xml_name.split('/')[-1][:-4] + \"_\" + str(bbox[0]) + \\\n",
-    "        \"_\" + str(bbox[1]) + \"_\" + str(bbox[2]) + \"_\" + str(bbox[3]) + '_' + str(i) + \".jpg\"\n",
-    "        #print(save_path_name)\n",
-    "        cv2.imwrite(save_path_name, img_obj)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#classes = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person']\n",
+    "classes = ['bus', 'truck']\n",
+    "for cls in classes:\n",
+    "    #image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/JPEGImages/'\n",
+    "    #xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/Annotations/'\n",
+    "    image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/image/' + cls + '/'\n",
+    "    xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/xml/' + cls + '/'\n",
+    "    SEED_XML_DIR = xml_dir\n",
+    "    SEED_IMG_DIR = image_dir\n",
+    "    \n",
+    "    seed_xml_names = os.listdir(SEED_XML_DIR)\n",
+    "    seed_xml_names.sort()\n",
+    "\n",
+    "    for xml_name in seed_xml_names:\n",
+    "        if(not xml_name.endswith('.xml')):\n",
+    "            continue\n",
+    "        img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
+    "        xml_name = SEED_XML_DIR + xml_name\n",
+    "        #print(img_name)\n",
+    "        #print(xml_name)\n",
+    "        tree=ET.parse(xml_name)\n",
+    "        img = cv2.imread(img_name)    \n",
+    "        objs = get_obj_from_xml(xml_name)\n",
+    "\n",
+    "        i = -1\n",
+    "        for obj_element in objs:\n",
+    "            bbox = get_bbox_from_xmlobj(obj_element)\n",
+    "            img_obj = get_obj_from_image_file(img_name, bbox)\n",
+    "            i = i+1\n",
+    "            cls = get_cls_from_xmlobj(obj_element)\n",
+    "            #if(cls not in classes):\n",
+    "                #continue\n",
+    "            cls_path = Path(GENE_OBJ_DIR + cls)\n",
+    "            if(not cls_path.is_dir()):\n",
+    "                os.system(\"mkdir -p \" + GENE_OBJ_DIR + cls) # If use 'cls_path' : Can't convert 'PosixPath' object to str implicitly\n",
+    "            save_path_name = GENE_OBJ_DIR + cls + \"/\" + xml_name.split('/')[-1][:-4] + \"_\" + str(bbox[0]) + \\\n",
+    "            \"_\" + str(bbox[1]) + \"_\" + str(bbox[2]) + \"_\" + str(bbox[3]) + '_' + str(i) + \".jpg\"\n",
+    "            #print(save_path_name)\n",
+    "            cv2.imwrite(save_path_name, img_obj)\n"
+   ]
   },
   {
    "cell_type": "code",
