ncs2 install dir

--- a/just_expand_obj.ipynb
+++ b/just_expand_obj.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1155,6 +1155,103 @@
       "new_bbox not suitable, retry...\n",
       "new_bbox not suitable, retry...\n",
       "(180, 94, 3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(132, 66, 3)\n",
+      "(102, 97, 3)\n",
+      "(68, 43, 3)\n",
+      "new_bbox not suitable, retry...\n",
+      "(127, 60, 3)\n",
+      "(64, 47, 3)\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "new_bbox not suitable, retry...\n",
+      "(246, 115, 3)\n",
+      "(91, 103, 3)\n"
      ]
     }
    ],
